# bk-plugin-framework-python

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  License.txt  README.md  codecov.yml
bk-plugin-framework/: .flake8  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
bk-plugin-framework/benchmark/: execute.sh  invoke.json
bk-plugin-framework/bk_plugin/forms/1.0.0/: form.js
bk-plugin-framework/bk_plugin_framework/: __version__.py  constants.py  envs.py  metrics.py  serializers.py
bk-plugin-framework/bk_plugin_framework/hub/: __init__.py
bk-plugin-framework/bk_plugin_framework/kit/: __init__.py  api.py  authentication.py  decorators.py  permission.py  plugin.py
bk-plugin-framework/bk_plugin_framework/runtime/: callbacker.py  executor.py
bk-plugin-framework/bk_plugin_framework/runtime/callback/: __init__.py  api.py  apps.py
bk-plugin-framework/bk_plugin_framework/runtime/callback/celery/: queues.py  tasks.py
bk-plugin-framework/bk_plugin_framework/runtime/loghub/: __init__.py  admin.py  apps.py  log.py  models.py
bk-plugin-framework/bk_plugin_framework/runtime/loghub/migrations/: 0001_initial.py
bk-plugin-framework/bk_plugin_framework/runtime/schedule/: __init__.py  admin.py  apps.py  models.py  utils.py
bk-plugin-framework/bk_plugin_framework/runtime/schedule/celery/: beat.py  queues.py  tasks.py
bk-plugin-framework/bk_plugin_framework/runtime/schedule/migrations/: 0001_initial.py  0002_schedule_finish_at.py  0003_auto_20210830_1945.py  0004_schedule_scheduling.py  0005_schedule_err.py
bk-plugin-framework/bk_plugin_framework/services/bpf_service/: __init__.py  apps.py  middlewares.py  models.py  urls.py
bk-plugin-framework/bk_plugin_framework/services/bpf_service/api/: __init__.py  callback.py  detail.py  invoke.py  logs.py  meta.py  permissions.py  plugin_api_dispatch.py  schedule.py
bk-plugin-framework/bk_plugin_framework/services/bpf_service/api/serializers/: __init__.py
bk-plugin-framework/bk_plugin_framework/services/bpf_service/management/commands/: __init__.py  sync_apigateway_if_changed.py  sync_plugin_apigw.py
bk-plugin-framework/bk_plugin_framework/services/bpf_service/migrations/: 0001_initial.py
bk-plugin-framework/bk_plugin_framework/services/debug_panel/: views.py
bk-plugin-framework/bk_plugin_framework/services/debug_panel/management/commands/: rundebugserver.py
bk-plugin-framework/bk_plugin_framework/utils/: __init__.py  local.py  log.py  module_load.py  validations.py
bk-plugin-framework/docs/: benchmark.md  how_to_integrate.md  user_journey.md
bk-plugin-framework/tests/: conftest.py  settings.py
bk-plugin-framework/tests/hub/: test_hub.py
bk-plugin-framework/tests/kit/: test_plugin.py
bk-plugin-framework/tests/runtime/: test_executor.py
bk-plugin-framework/tests/runtime/callback/: test_utils.py
bk-plugin-framework/tests/runtime/callback/celery/: test_tasks.py
bk-plugin-framework/tests/runtime/schedule/: test_utils.py
bk-plugin-framework/tests/runtime/schedule/celery/: test_tasks.py
bk-plugin-framework/tests/services/bpf_service/: test_resources_yaml.py
bk-plugin-framework/tests/template/: test_docker_template.py
bk-plugin-framework/tests/utils/: test_local.py  test_log.py  test_module_load.py  test_validations.py
runtime/bk-plugin-runtime/: .flake8  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
runtime/bk-plugin-runtime/bk_plugin_runtime/: __version__.py  manage.py  schema.py  settings.py  urls.py  wsgi.py
runtime/bk-plugin-runtime/bk_plugin_runtime/config/: __init__.py  default.py  dev.py  prod.py  stag.py
runtime/bk-plugin-runtime/bk_plugin_runtime/static/: index.html  json.worker.js
runtime/bk-plugin-runtime/bk_plugin_runtime/static/assets/: index.html
runtime/bk-plugin-runtime/bk_plugin_runtime/static/assets/css/: 5.48ea5f4.css  5.4a9a77b.css  5.8e92e5f.css  5.ae7e5a9.css  5.f3a15fb.css  6.b5b1595.css  app.1acbc76.css  app.2207146.css  app.2a8d678.css  app.6a01649.css  app.8df5bf2.css
runtime/bk-plugin-runtime/bk_plugin_runtime/static/assets/js/: 10.114016f.js  11.11ae4f7.js  12.3c7b173.js  13.b6a58d0.js  15.42c10e7.js  16.0792da5.js  17.7c96e4d.js  18.99a180b.js  19.d8557b5.js  20.14c582e.js  21.fd978d6.js  22.3386c8f.js  23.a8df42e.js  24.e1baa3f.js  25.def2ddc.js  26.5a0e1a2.js  27.6844850.js  28.e01b321.js  4.30b0d73.js  4.4b17f60.js  (+36 more)
runtime/bk-plugin-runtime/bk_plugin_runtime/templates/: debug_panel.html
(+50 files in other folders)
