[tool.poetry]
name = "bk-plugin-framework"
version = "2.0.1"
description = "bk plugin python framework"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1,<4.0"
pydantic = "^1.0"
werkzeug = "^2.0.0"
apigw-manager = {version = "^1.0.6", extras = ["extra"]}
bk-plugin-runtime = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^20.8b1"
pytest-django = "^4.5.2"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
