[tool.poetry]
name = "bk-plugin-framework"
version = "2.3.6rc3"
description = "bk plugin python framework"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0,<4.0"
pydantic = ">=1.0,<3"
werkzeug = ">=2.0.0, <4.0"
apigw-manager = {version = ">=4.2.3, <5", python = ">=3.8,<3.13"}
bk-plugin-runtime = "2.1.5rc3"
jsonschema = ">=2.5.0,<5.0.0"
drf-spectacular = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^20.8b1"
pytest-django = "^4.5.2"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.tencent.com/repository/pypi/tencent_pypi/simple"
priority = "supplemental"
