[tool.poetry]
name = "bk-plugin-runtime"
version = "2.1.0rc4"
description = "bk plugin python django runtime"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0,<4.0"
redis = ">=2.10.5,<6"
Django = ">=2.2.6,<5"
pymysql = ">=1,<2"
gunicorn = ">=19.6.0"
djangorestframework = "^3.15"
drf-yasg = "^1.21.5"
raven = "^6.5.0"
ddtrace = "^0.14.1"
django-cors-headers = "^4.0.0"
django-dbconn-retry = "^0.1.5"
blueapps = {version = ">=4.15.1, <5.0", extras = ["opentelemetry"]}
protobuf=">=3.19.4,<6.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''